<resources>
    <string name="app_name">Soluções STO LIO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">STO ATACADISTA LTDA</string>
    <string name="nav_header_subtitle">cpd@stoatacadista.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pagamento">Efetuar Pagamento</string>
    <string name="menu_cancelamnto">Cancelamentos</string>
    <string name="menu_lista_pagamento">Listas de Pagamentos</string>
    s

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">ABA EM DESENVOLVIMENTO</string>
</resources>
