<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_pagamento"
        android:name="com.dev.deijai.soluesstolio.ui.fragments.PagamentoFragment"
        android:label="@string/menu_pagamento"
        tools:layout="@layout/fragment_pagamento" />

    <fragment
        android:id="@+id/nav_cancelamento"
        android:name="com.dev.deijai.soluesstolio.ui.fragments.CancelamentoFragment"
        android:label="@string/menu_cancelamnto"
        tools:layout="@layout/fragment_cancelamento" />

    <fragment
        android:id="@+id/nav_lista_pagamento"
        android:name="com.dev.deijai.soluesstolio.ui.fragments.ListaPagamentoFragment"
        android:label="@string/menu_lista_pagamento"
        tools:layout="@layout/fragment_lista_pagamento" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dev.deijai.soluesstolio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.dev.deijai.soluesstolio.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.dev.deijai.soluesstolio.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.dev.deijai.soluesstolio.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.dev.deijai.soluesstolio.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.dev.deijai.soluesstolio.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>